--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 logging.file=server.log
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb  
+spring.datasource.username=root  
+spring.datasource.password=mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver  
+spring.jpa.hibernate.ddl-auto=create-drop 
